fix homepage url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kellysal/github.io/portfolio-r2",
+  "homepage": "https://kellysal.github.io/portfolio-r2",
   "name": "portfolio-r3",
   "version": "0.1.0",
   "private": true,
